fix: fix contrast on button

--- a/components/PrimaryButton/PrimaryButton.module.sass
+++ b/components/PrimaryButton/PrimaryButton.module.sass
@@ -8,5 +8,5 @@
     cursor: pointer
 
     p
-        color: $white_basic
+        color: $black_basic
         font-weight: 600
